update user module

--- a/src/app/dialogs/user-register/user-register.component.html
+++ b/src/app/dialogs/user-register/user-register.component.html
@@ -6,52 +6,45 @@
   <div class="row">
     <div class="col col-md-3">
       <img [src]="photoSrc" (click)="fileinput.click()" class="photoDiv shadow p-3 mb-5 bg-white">
-      <input type="file" #fileinput style="display: none;">
+      <input type="file" (change)="uploadPhoto($event.target.files)" #fileinput style="display: none;">
+      <mat-progress-bar color="primary" mode="determinate" [value]="progressBarValue">
+      </mat-progress-bar>
     </div>
     <div class="col col-md-9">
       <div class="form-row">
         <div class="form-group col-md-6">
-          <label for="employeeCode">ລະຫັດພະນັກງານ</label>
-          <input type="text" class="form-control" id="employeeCode" readonly formControlName="employeeCode">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="userName">username</label>
-          <input type="text" minlength="3" class="form-control" id="userName" formControlName="userName"
-            (keyup)="checkUserDuplicate($event.target.value)" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="email">email</label>
-          <input type="email" minlength="6" class="form-control" id="email"
-            (keyup)="checkEmailDuplicate($event.target.value)" formControlName="email" required>
-        </div>
-        <div class="form-group col-md-6">
           <label for="gender">ເພດ</label>
           <select class="form-control" id="gender" formControlName="gender" required>
             <option value="" disabled>--------</option>
-            <option value="Mr">Mr.</option>
-            <option value="Mrs">Mrs.</option>
+            <option value="M">Mr.</option>
+            <option value="F">Mrs.</option>
           </select>
         </div>
-
         <div class="form-group col-md-6">
-          <label for="fullName">ຊື່ເຕັມ</label>
-          <input type="text" minlength="3" class="form-control" id="fullName" formControlName="fullName" required>
+          <label for="username">username</label>
+          <input type="text" minlength="3" class="form-control" id="username" formControlName="username" required>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="fullname">ຊື່ເຕັມ</label>
+          <input type="text" minlength="3" class="form-control" id="fullname" formControlName="fullname" required>
         </div>
         <div class="form-group col-md-6">
           <label for="dateOfbirth">ວັນເດືອນປີເກີດ</label>
           <input type="date" class="form-control" id="dateOfbirth" formControlName="dateOfbirth" required>
         </div>
-        <div class="form-group col-md-12">
-          <label for="placeOfBirth">ສະຖານທີເກີດ</label>
-          <input type="text" class="form-control" id="placeOfBirth" formControlName="placeOfBirth" required>
-        </div>
         <div class="form-group col-md-6">
-          <label for="idCardno">ເລກບັດປະຈະຕົວ / ສຳມະໂນຄົວ</label>
-          <input type="text" class="form-control" id="idCardno" formControlName="idCardno" required>
+          <label for="idCardNumber">ເລກບັດປະຈະຕົວ / ສຳມະໂນຄົວ</label>
+          <input type="text" class="form-control" id="idCardNumber" formControlName="idCardNumber" required>
         </div>
+
         <div class="form-group col-md-6">
           <label for="mobile">ເບີໂທລະສັບ</label>
           <input type="text" class="form-control" id="mobile" placeholder="020..." formControlName="mobile" required>
+        </div>
+
+        <div class="form-group col-md-12">
+          <label for="currentAddress">ບ່ອນຢູ່ປະຈຸບັນ</label>
+          <input type="text" class="form-control" id="currentAddress" formControlName="currentAddress" required>
         </div>
         <div class="form-group col-md-6">
           <label for="userpassword">ລະຫັດ</label>
@@ -65,18 +58,18 @@
         </div>
 
         <div class="form-group col-md-6" [ngClass]="showRole">
-          <label for="re-password">Role</label>
-          <select class="form-control" formControlName="role">
+          <label for="roleId">Role</label>
+          <select class="form-control" id="roleId" formControlName="roleId">
             <option value="" disabled>------</option>
-            <option value="{{ role.roleCode }}" *ngFor="let role of roles | async">{{ role.roleCode }}</option>
+            <option value="{{ role.id }}" *ngFor="let role of roles ">{{ role.role_name }}</option>
           </select>
         </div>
         <div class="form-group col-md-6" [ngClass]="showRole">
-          <label for="kitchen">Kitchen</label>
-          <select class="form-control" id="kitchen" formControlName="kitchen">
+          <label for="kitchenId">Kitchen</label>
+          <select class="form-control" id="kitchenId" formControlName="kitchenId">
             <option value="" disabled>------</option>
             <option value="all">All</option>
-            <option value="{{ kitchen.kitchenName }}" *ngFor="let kitchen of kitchens | async">{{ kitchen.kitchenName }}
+            <option value="{{ kitchen.id }}" *ngFor="let kitchen of kitchens">{{ kitchen.kitchenName }}
             </option>
           </select>
         </div>
