--- a/src/app/dialogs/close-balance/close-balance.component.html
+++ b/src/app/dialogs/close-balance/close-balance.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group col-md-3 text-right">
       <button mat-flat-button color="warn" (click)="closeBalanceProcess()" [disabled]="disableCloseJob"
-        style="width: 120px; margin-top: 31px;height: 40px;">ປິດຍອດຂາຍ</button>
+        style="width: 120px; margin-top: 31px;height: 40px;">ກວດຍອດຂາຍ</button>
     </div>
     <div class="form-group col-md-9">
       <label for="eodCashBalance">ຍອດຂາຍ ເງິນສົດ</label>
