--- a/src/app/dialogs/add-food-category/add-food-category.component.html
+++ b/src/app/dialogs/add-food-category/add-food-category.component.html
@@ -4,12 +4,12 @@
 <form [formGroup]="foodCateForm">
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="foodCategoryName">ປະເພດອາຫານ ພາສາອັງກິດ</label>
-      <input type="text" class="form-control" formControlName="foodCategoryName" id="foodCategoryName" required>
+      <label for="foodTypeNameEn">ປະເພດອາຫານ ພາສາອັງກິດ</label>
+      <input type="text" class="form-control" formControlName="foodTypeNameEn" id="foodTypeNameEn" required>
     </div>
     <div class="form-group col-md-6">
-      <label for="foodCategoryNameLao">ປະເພດອາຫານ ພາສາ ລາວ</label>
-      <input type="text" class="form-control" formControlName="foodCategoryNameLao" id="foodCategoryNameLao" required>
+      <label for="foodTypeName">ປະເພດອາຫານ ພາສາ ລາວ</label>
+      <input type="text" class="form-control" formControlName="foodTypeName" id="foodTypeName" required>
     </div>
     <div class="form-group col-md-12 text-right">
       <button mat-flat-button color="primary" style="width: 100px; margin-right: 5px;" (click)="addNewCate()">Add
@@ -23,19 +23,30 @@
     <thead>
       <th class="text-left">ປະເພດອາຫານ ພາສາອັງກິດ</th>
       <th class="text-left">ປະເພດອາຫານ ພາສາ ລາວ</th>
-      <th class="text-left"></th>
+      <th class="text-left">Enable</th>
+      <th class="text-left">Remove</th>
     </thead>
     <tbody>
-      <tr *ngFor="let cat of FoodCategories | async" (click)="addUpdate(cat)">
-        <td class="text-left">{{ cat.foodCategoryName }}</td>
-        <td class="text-left">{{ cat.foodCategoryNameLao }}</td>
-        <td class="text-center"><img src="../../../assets/icons/baseline-delete-24px.svg" style="cursor: pointer"
+      <tr *ngFor="let cat of foodTypes " (click)="addUpdate(cat)">
+        <td class="text-left">{{ cat.foodTypeNameEn }}</td>
+        <td class="text-left">{{ cat.foodTypeName }}</td>
+        <td class="text-center" *ngIf="cat.enabled === 1; else disabledCat">
+          <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png"
+            style="max-width: 20px;cursor: pointer;">
+        </td>
+        <ng-template #disabledCat>
+          <td class="text-center align-middle">
+            <img mat-raised-button src="../../../assets/icons/baseline-remove-24px.svg"
+              style="max-width: 20px; cursor: pointer;">
+          </td>
+        </ng-template>
+        <td class=" text-center"><img src="../../../assets/icons/baseline-delete-24px.svg" style="cursor: pointer"
             (click)="deleteCat(cat)"></td>
       </tr>
     </tbody>
     <tfoot>
       <tr>
-        <td [colSpan]="3"></td>
+        <td [colSpan]="4"></td>
       </tr>
     </tfoot>
   </table>
