--- a/src/app/dialogs/extended-food-type/extended-food-type.component.html
+++ b/src/app/dialogs/extended-food-type/extended-food-type.component.html
@@ -4,17 +4,19 @@
 <form [formGroup]="extendedFoodTypeForm">
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="extendedFoodName">ປະເພດອາຫານຍ່ອຍ ພາສາອັງກິດ</label>
-      <input type="text" class="form-control" formControlName="extendedFoodName" id="extendedFoodName" required>
+      <label for="subFoodNameEn">ປະເພດອາຫານຍ່ອຍ ພາສາອັງກິດ</label>
+      <input type="text" class="form-control" formControlName="subFoodNameEn" id="subFoodNameEn" required>
     </div>
     <div class="form-group col-md-6">
-      <label for="extendedFoodName_lao">ປະເພດອາຫານຍ່ອຍ ພາສາ ລາວ</label>
-      <input type="text" class="form-control" formControlName="extendedFoodName_lao" id="extendedFoodName_lao" required>
+      <label for="subFoodName">ປະເພດອາຫານຍ່ອຍ ພາສາ ລາວ</label>
+      <input type="text" class="form-control" formControlName="subFoodName" id="subFoodName" required>
     </div>
     <div class="form-group col-md-12 text-right">
-      <button mat-flat-button color="primary" style="width: 100px; margin-right: 5px;" (click)="addNewExtendedFoodType()">Add
+      <button mat-flat-button color="primary" style="width: 100px; margin-right: 5px;" [disabled]="disableSaveBtn"
+        (click)="addNewExtendedFoodType()">Add
         new</button>
-      <button mat-flat-button color="warn" style="width: 100px;">Update</button>
+      <button mat-flat-button color="warn" style="width: 100px;" [disabled]="disableUpdateBtn"
+        (click)="updateSubFoodBe()">Update</button>
     </div>
   </div>
 </form>
@@ -23,19 +25,29 @@
     <thead>
       <th class="text-left">ປະເພດອາຫານ ພາສາອັງກິດ</th>
       <th class="text-left">ປະເພດອາຫານ ພາສາ ລາວ</th>
-      <th class="text-left"></th>
+      <th class="text-center">Enable</th>
+      <th class="text-center">Remove</th>
     </thead>
     <tbody>
-      <tr *ngFor="let ext of extendedFoodTypes | async">
-        <td class="text-left">{{ ext.extendedFoodName }}</td>
-        <td class="text-left">{{ ext.extendedFoodName_lao }}</td>
-        <td class="text-center"><img src="../../../assets/icons/baseline-delete-24px.svg" style="cursor: pointer"
-            (click)="deleteExtendedFoodType(ext)"></td>
+      <tr *ngFor="let ext of subFoods">
+        <td class="text-left" (click)="updateSubFood(ext)">{{ ext.subFoodNameEn }}</td>
+        <td class="text-left" (click)="updateSubFood(ext)">{{ ext.subFoodName }}</td>
+        <td class="text-center" *ngIf="ext.enabled === 1; else disabledCat">
+          <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png"
+            style="max-width: 20px;cursor: pointer;" (click)="enabledToggle(ext)">
+        </td>
+        <ng-template #disabledCat>
+          <td class="text-center align-middle">
+            <img mat-raised-button src="../../../assets/icons/baseline-remove-24px.svg"
+              style="max-width: 20px; cursor: pointer;" (click)="enabledToggle(ext)">
+          </td>
+        </ng-template>
+        <td class="text-center"><img src="../../../assets/icons/baseline-delete-24px.svg" style="cursor: pointer"></td>
       </tr>
     </tbody>
     <tfoot>
       <tr>
-        <td [colSpan]="3"></td>
+        <td [colSpan]="4"></td>
       </tr>
     </tfoot>
   </table>
