--- a/src/app/dialogs/add-food/add-food.component.html
+++ b/src/app/dialogs/add-food/add-food.component.html
@@ -25,18 +25,27 @@
           <input type="text" class="form-control" id="food_name_en" formControlName="food_name_en" required>
         </div>
         <div class="form-group col-md-6">
-          <label for="food_category">ຈັດໃນໝວດ</label>
-          <select class="form-control" id="food_category" required formControlName="food_category">
+          <label for="foodTypeId">ຈັດໃນໝວດ</label>
+          <select class="form-control" id="foodTypeId" required formControlName="foodTypeId">
             <option value="" disabled>-----------</option>
-            <option *ngFor="let c of categories |async" value="{{ c.foodCategoryNameLao }}">{{ c.foodCategoryNameLao }}
+            <option *ngFor="let c of foodtypes" value="{{ c.id }}">{{ c.foodTypeName }}
             </option>
           </select>
         </div>
         <div class="form-group col-md-6">
-          <label for="kitchenName">ຫ້ອງຄົວ</label>
-          <select class="form-control" id="kitchenName" required formControlName="kitchen">
+          <label for="isParent">ເປັນອາຫານຫຼັກ</label>
+          <select class="form-control" id="isParent" required formControlName="isParent"
+            (change)="selectedType($event.target.value)">
             <option value="" disabled>-----------</option>
-            <option *ngFor="let k of kitchens |async" value="{{ k.kitchenName }}">{{ k.kitchenName }}</option>
+            <option value="0">ອາຫານທົ່ວໄປ</option>
+            <option value="1">ມີອາຫານຍ່ອຍ</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="kitchenId">ຫ້ອງຄົວ</label>
+          <select class="form-control" id="kitchenId" required formControlName="kitchenId">
+            <option value="" disabled>-----------</option>
+            <option *ngFor="let k of kitchens " value="{{ k.id }}">{{ k.kitchenName }}</option>
           </select>
         </div>
         <div class="form-group col-md-6">
@@ -48,21 +57,15 @@
           <input type="number" class="form-control" id="price" formControlName="price" required>
         </div>
         <div class="form-group col-md-6">
-          <label for="currency">ສະກູນ</label>
-          <select class="form-control" id="currency" required formControlName="currency">
-            <option *ngFor="let c of Currencies |async" value="{{ c.currencyName }}">{{ c.currencyName }}</option>
+          <label for="currencyId">ສະກູນ</label>
+          <select class="form-control" id="currencyId" required formControlName="currencyId">
+            <option value="" disabled>-----------</option>
+            <option *ngFor="let c of currencies " value="{{ c.id }}">{{ c.currency_name }}</option>
           </select>
         </div>
         <div class="form-group col-md-6">
-          <label for="parent_food">ປະເພດ</label>
-          <select class="form-control" id="parent_food" required formControlName="parent_food">
-            <option value="common">common</option>
-            <option value="master">master Food</option>
-          </select>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="noted">ໝາຍເຫດ</label>
-          <input type="text" class="form-control" id="noted" formControlName="noted">
+          <label for="note">ໝາຍເຫດ</label>
+          <input type="text" class="form-control" id="note" formControlName="note">
         </div>
         <div class="form-group col-md-12">
           <button mat-raised-button color="primary" (click)="createFood()" [disabled]="saveDisabled"
