--- a/src/app/dialogs/subfoods/subfoods.component.html
+++ b/src/app/dialogs/subfoods/subfoods.component.html
@@ -6,22 +6,22 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="subFood">ປະເພດອາຫານຍ່ອຍ</label>
-          <select class="form-control" id="subFood" formControlName="subFood" (change)="selectedFood($event.target.value)"
-            required>
-            <option *ngFor="let subFood of extendedFoodList" value="{{ subFood.extendedFoodName }}">{{
-              subFood.extendedFoodName }}</option>
+          <select class="form-control" id="subFood" formControlName="subFood" (change)="selectedFood($event)" required>
+            <option *ngFor="let subFood of subfoods" value="{{ subFood.id }}">{{
+              subFood.subFoodName }}</option>
           </select>
         </div>
         <div class="form-group col-md-6">
           <label for="quantity">ຈຳນວນ</label>
-          <input type="number" step="1" class="form-control text-right" formControlName="quantity" required>
+          <input type="number" step="1" class="form-control text-right" formControlName="quantity"
+            (change)="quantitySelect()" (keyup)="quantitySelect()" required>
         </div>
-
       </div>
     </mat-card-content>
     <mat-card-footer>
       <div class="form-group col-md-12">
-        <button mat-flat-button color="primary" style="width: 100%;" (click)="addFood()" [disabled]="btnDisable">ເລືອກ</button>
+        <button mat-flat-button color="primary" style="width: 100%;" (click)="addFood()"
+          [disabled]="btnDisable">ເລືອກ</button>
       </div>
     </mat-card-footer>
   </mat-card>
