--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,7 +1,7 @@
 <mat-card class="topHeader">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Reports</mat-card-title>
+    <mat-card-title>ລາຍງານ</mat-card-title>
     <mat-card-subtitle>report by categories</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
